update to version 1.0.2 now code will run with jdk1.8